--- a/app/scss/layout/_for-diller.scss
+++ b/app/scss/layout/_for-diller.scss
@@ -73,7 +73,7 @@ main {
 .fd-main-reasons {
     padding: 55px 0 97px 0;
     background-color: #25282a;
-    background-image: url(../../image/fd-image1.png);
+    background-image: url(../image/fd-image1.png);
     background-size: cover;
     background-position: center center;
 
@@ -101,7 +101,7 @@ main {
             width: 120px;
             height: 52px;
             position: absolute;
-            background-image: url(../../image/fd-image2.svg);
+            background-image: url(../image/fd-image2.svg);
             background-size: 100% 100%;
             left: -115px;
             top: 9px;
@@ -117,7 +117,7 @@ main {
             width: 151px;
             height: 64px;
             position: absolute;
-            background-image: url(../../image/fd-image3.svg);
+            background-image: url(../image/fd-image3.svg);
             background-size: 100% 100%;
             right: -142px;
             top: 12px;
@@ -342,7 +342,7 @@ main {
 
 .fd-sevensect {
     height: 589px;
-    background: url(../../image/fd-image9.png) no-repeat center right;
+    background: url(../image/fd-image9.png) no-repeat center right;
     padding-top: 183px;
     background-size: cover;
 
@@ -432,7 +432,7 @@ main {
     .btn-red {
         display: inline-block;
         text-align: center;
-        background-image: url(../../image/icons/orion_download-document.svg);
+        background-image: url(../image/icons/orion_download-document.svg);
         background-position: center right 20px;
         background-repeat: no-repeat;
         padding: 22px 0;
@@ -607,7 +607,7 @@ main {
 
     .fd-main-reasons {
         padding: 55px 0 62px 0;
-        background-image: url(../../image/fd-image-tablet-1.png);
+        background-image: url(../image/fd-image-tablet-1.png);
     }
 
     .fd-main-reasons .title-white {
@@ -634,14 +634,14 @@ main {
     }
 
     .fd-main-reasons .left-arrow:before {
-        background-image: url(../../image/fd-image-tablet-2.png);
+        background-image: url(../image/fd-image-tablet-2.png);
         width: 75.88px;
         height: 62.05px;
         left: -95px;
     }
 
     .fd-main-reasons .right-arrow:before {
-        background-image: url(../../image/fd-image-tablet-3.png);
+        background-image: url(../image/fd-image-tablet-3.png);
         width: 36.62px;
         height: 20px;
         right: -44px;
@@ -1001,7 +1001,7 @@ main {
 
     .fd-sevensect {
         padding-top: 51px;
-        background: url(../../image/fd-image-phone-3.png) no-repeat center right;
+        background: url(../image/fd-image-phone-3.png) no-repeat center right;
         background-size: cover;
     }
 
