--- a/app/scss/layout/_whoweare.scss
+++ b/app/scss/layout/_whoweare.scss
@@ -168,3 +168,15 @@
     }
 
 }
+
+.ww-history {
+    .reviews__tab .tab-nav {
+        position: relative;
+        display: inline-block;
+        vertical-align: top;
+    }
+
+    .reviews__tab .title-text-border {
+        margin-bottom: 43px;
+    }
+}
