--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1818,9 +1818,21 @@ main { min-height: 400px; }
 
 .ww-team .slider-reviews.slick-slider .slick-track { padding-bottom: 100px; }
 
-.ww-history .reviews__tab .tab-nav { position: relative; display: inline-block; vertical-align: top; }
+.ww-history { padding: 63px 0 130px 0; border-bottom: 1px solid #DBDBDB; }
+
+.ww-history .reviews__tab { overflow: initial; }
+
+.ww-history .reviews__tab .tab-nav { position: relative; display: inline-block; vertical-align: top; width: 268px; }
 
 .ww-history .reviews__tab .title-text-border { margin-bottom: 43px; }
+
+.ww-history .nav-pills .nav-link { display: block; }
+
+.ww-history .tab-content { display: inline-block; vertical-align: top; width: calc(100% - 276px); padding: 0 95px 70px 0; }
+
+.ww-history .tab-content .tab-text { border-left: 1px solid #DBDBDB; padding: 17px 0 0 80px; }
+
+.ww-reviews { padding: 81px 0 0 0; }
 
 .promotions_cards .cards-dark:not(:first-child) { margin-top: 50px; }
 
