--- a/app/scss/layout/_goods.scss
+++ b/app/scss/layout/_goods.scss
@@ -1,91 +1,109 @@
-.goods_page{
-    .top-baner{
-        &__img{
+.goods_page {
+    .top-baner {
+        &__img {
             object-position: 50% 19%;
         }
-        .container{
+
+        .container {
             height: 100%;
         }
-        .row{
+
+        .row {
             height: 100%;
             align-items: center;
         }
     }
-    .card_goods{
+
+    .card_goods {
         margin-top: 30px;
         background-color: #FFFFFF;
         box-shadow: 0px 100px 100px rgba(0, 0, 0, 0.08);
-        &_dscr{
-            .btn-red{
+
+        &_dscr {
+            .btn-red {
                 width: 255px;
             }
-            h3{
+
+            h3 {
                 margin-top: 47px;
                 line-height: $line-height-h3;
-                font-size:$font-size-h3;
+                font-size: $font-size-h3;
                 margin-bottom: 10px;
             }
-            h2{
+
+            h2 {
                 line-height: $line-height-h2;
-                font-size:$font-size-h2;
+                font-size: $font-size-h2;
                 font-weight: 700;
             }
-            a{
+
+            a {
                 display: inline-flex;
                 align-items: center;
                 justify-content: center;
             }
-            &_bottom{
+
+            &_bottom {
                 display: inline-flex;
                 vertical-align: bottom;
             }
         }
-        &_price{
+
+        &_price {
             margin-left: 58px;
             margin-right: 50px;
             padding-top: 25px;
         }
-        &_contens{
+
+        &_contens {
             font-weight: 500;
             margin-bottom: 28px;
             margin-top: 20px;
         }
-        &_pluses{
-        span{
-            font-size: 14px;
-            line-height: 17px;
-            margin-left: 10px;
-            max-width: 37px;
-            display: inline-block;
-            width: 40px;
-        }
-        >div{
-            vertical-align: top;
-            display: flex;
-        }
-        >div:last-child{
-            margin-left: 10px;
-            margin-top: 15px;
+
+        &_pluses {
+            span {
+                font-size: 14px;
+                line-height: 17px;
+                margin-left: 10px;
+                max-width: 37px;
+                display: inline-block;
+                width: 40px;
+            }
+
+            >div {
+                vertical-align: top;
+                display: flex;
+            }
+
+            >div:last-child {
+                margin-left: 10px;
+                margin-top: 15px;
+            }
         }
     }
-    }
-    .download-catalog{
+
+    .download-catalog {
         padding: 150px 0 225px;
     }
 }
+
 // goods page open
 
-.goods_page_open{
-    .top-baner{
+.goods_page_open {
+    .top-baner {
         display: none;
     }
-    .card_goods{
+
+    .card_goods {
         padding-top: 40px
     }
+
     .assortment-heading__desc {
         margin-top: 65px;
         margin-bottom: 150px;
-        > p{
+
+        >p {
             margin-top: 20px;
         }
     }
@@ -93,196 +111,244 @@
 
 
 
-@media(max-width:1199.8px){
-    .goods_page{
-        
-        .top-baner{
+@media(max-width:1199.8px) {
+    .goods_page {
+
+        .top-baner {
             &__img {
                 object-position: 46% 0%;
             }
         }
-       .card_goods{
-           padding-right: 5px;
-        &_dscr{
-            .btn-red{
-                width: 225px;
+
+        .card_goods {
+            padding-right: 5px;
+
+            &_dscr {
+                .btn-red {
+                    width: 225px;
+                }
+
+                h2 {
+                    font-size: 30px;
+                    line-height: 37px;
+                }
             }
-            h2{
-                font-size: 30px;
-                line-height: 37px;
+
+            &_price {
+                margin-left: 35px;
+                margin-right: 30px;
             }
         }
-        &_price{
-            margin-left: 35px;
-            margin-right: 30px;
-        }
-       }
     }
 }
-@media(max-width:991.8px){
-    .goods_page{
-         .card_goods{
-             padding-bottom: 0px;
-            &_dscr{
-                h3{
+
+@media(max-width:991.8px) {
+    .goods_page {
+        .card_goods {
+            padding-bottom: 0px;
+
+            &_dscr {
+                h3 {
                     margin-top: 5px;
                     font-size: $base-font-size - 1px;
                     line-height: $base-line-height;
                 }
-                .btn-red{
+
+                .btn-red {
                     width: 180px;
                 }
-                &_bottom{
+
+                &_bottom {
                     flex-direction: column;
                     margin-top: -100px;
                     margin-left: 20px;
                 }
             }
-            &_contens{
+
+            &_contens {
                 width: 180px;
             }
-            &_price{
+
+            &_price {
                 margin: 0;
                 padding: 0;
                 margin-top: 40px;
                 margin-bottom: 20px;
-                *{
+
+                * {
                     display: inline;
                 }
-                h2{
+
+                h2 {
                     margin-left: 20px;
                     font-size: 24px;
                     line-height: 29px;
                 }
             }
-            &_pluses{
-                span{
+
+            &_pluses {
+                span {
                     font-size: 12px;
                     line-height: 14px;
                 }
-                > div:last-child{
+
+                >div:last-child {
                     margin-left: 0;
                 }
-                > div:first-child img{
+
+                >div:first-child img {
                     width: 30px;
                 }
             }
         }
+
         .download-catalog {
             padding: 96px 0 35px;
         }
-        .calendar-section{
+
+        .calendar-section {
             padding: 81px 0 100px;
         }
     }
 
-// goods open
-    .goods_page_open{
-        .top-baner{
+    // goods open
+    .goods_page_open {
+        .top-baner {
             display: none;
         }
-        .card_goods{
+
+        .card_goods {
             padding-top: 40px
         }
+
         .assortment-heading__desc {
             margin-top: 50px;
             margin-bottom: 100px;
             padding: 39px 30px 20px;
-            > p{
+
+            >p {
                 margin-top: 20px;
             }
         }
     }
 }
 
-@media(max-width:767.8px){
-    .goods_page{
-        .card_goods{
-            &_img{
+@media(max-width:767.8px) {
+    .goods_page {
+        .card_goods {
+            &_img {
                 text-align: center;
             }
-           .col-md-7{
-               order: 1;
-           }
-           .col-md-5{
-            order: 2;
-        }
-        .btn-red{
-            order: 2;
-            width: 100%;
-            margin-top: 20px;
 
-        }
-        &_dscr{
-            margin-bottom: 15px;
-            padding: 0 20px;
-            h3{
-                font-size: 14px;
-                line-height: 17px;
-            }
-            display: flex;
-            flex-direction: column;
-            &_bottom{
-                flex-direction: row;
-                margin-top: -58px;
-                margin-left: 0;
+            .col-md-7 {
                 order: 1;
             }
-        }
-        &_pluses{
-            margin-left: 50px;
-            >div:last-child{
-                margin-top: 25px;
+
+            .col-md-5 {
+                order: 2;
+            }
+
+            .btn-red {
+                order: 2;
+                width: 100%;
+                margin-top: 20px;
+
+            }
+
+            &_dscr {
+                margin-bottom: 15px;
+                padding: 0 20px;
+
+                h3 {
+                    font-size: 14px;
+                    line-height: 17px;
+                }
+
+                display: flex;
+                flex-direction: column;
+
+                &_bottom {
+                    flex-direction: row;
+                    margin-top: -58px;
+                    margin-left: 0;
+                    order: 1;
+                }
+            }
+
+            &_pluses {
+                margin-left: 50px;
+
+                >div:last-child {
+                    margin-top: 25px;
+                }
+            }
+
+            &_price {
+                margin-top: 60px;
             }
         }
-        &_price{
-            margin-top: 60px;
-        }
-        }
     }
+
     // goods open
-    .goods_page_open{
-        .top-baner{
+    .goods_page_open {
+        .top-baner {
             display: none;
         }
-        .card_goods{
+
+        .card_goods {
             padding-top: 40px;
             margin-top: 0;
         }
+
         .assortment-heading__desc {
             margin-top: 23px;
             margin-bottom: 33px;
             padding: 20px 30px 20px;
-            > p{
+
+            >p {
                 margin-top: 20px;
             }
         }
     }
+
+    .goods_page .card_goods {
+        padding-right: 0px;
+    }
+
+    .goods_page .download-catalog {
+        padding-bottom: 70px;
+    }
 }
-@media(max-width:575.8px){
-    .goods_page{
-        .top-baner{
+
+@media(max-width:575.8px) {
+    .goods_page {
+        .top-baner {
             display: none;
         }
-        .card_goods{
-            &_price h2{
+
+        .card_goods {
+            &_price h2 {
                 font-size: 18px;
                 line-height: 22px;
                 margin-top: 52px;
             }
-            &_contens{
+
+            &_contens {
                 width: 110px;
             }
-            &_pluses{
+
+            &_pluses {
                 margin-top: -11px;
                 margin-left: 46px;
 
             }
-            .btn-red{
+
+            .btn-red {
                 margin-top: 15px;
             }
         }
-        .download-catalog{
+
+        .download-catalog {
             padding-top: 50px;
         }
     }
