--- a/app/scss/layout/_calendar.scss
+++ b/app/scss/layout/_calendar.scss
@@ -1,274 +1,263 @@
 .calendar-section {
-    padding: 125px 0;
+	padding: 125px 0;
 
-    &__title {
-        font-weight: 900;
-        font-size: $font-size-h2;
-        line-height: $line-height-h2;
-        color: $title-color;
-        margin-bottom: 16px;
-        width: 65%;
+	&__title {
+		font-weight: 900;
+		font-size: $font-size-h2;
+		line-height: $line-height-h2;
+		color: $title-color;
+		margin-bottom: 16px;
+		width: 65%;
 
-        +p {
-            width: 55%;
-        }
-    }
+		+ p {
+			width: 55%;
+		}
+	}
 
-    &__block {
-        margin-top: 35px;
-        display: flex;
-    }
+	&__block {
+		margin-top: 35px;
+		display: flex;
+	}
 
-    &__form {
-        flex: 0 0 51.2%;
-        padding: 40px 75px 50px 48px;
+	&__form {
+		flex: 0 0 51.2%;
+		padding: 40px 75px 50px 48px;
 
-        .btn-red {
-            width: 100%;
-            margin: 20px 0 30px;
-        }
+		.btn-red {
+			width: 100%;
+			margin: 20px 0 30px;
+		}
 
-        .group-checkobox {
-            display: flex;
-            align-items: center;
+		.group-checkobox {
+			display: flex;
+			align-items: center;
 
-            >p {
-                margin: 0;
-                font-weight: 300;
-                font-size: 14px;
-                line-height: 17px;
-                color: $light-gray;
+			p {
+				margin: 0;
+				font-weight: 300;
+				font-size: 14px;
+				line-height: 17px;
+				color: $light-gray;
+			}
+			a {
+				color: $light-gray;
+				position: relative;
+				text-decoration: underline;
+			}
+		}
+	}
 
-                >a {
-                    color: $light-gray;
-                    position: relative;
-                    text-decoration: underline;
-                }
-            }
-        }
-    }
+	&__img {
+		flex: 0 0 48.8%;
 
-    &__img {
-        flex: 0 0 48.8%;
-
-        >img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-    }
-
+		> img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
 }
 
 .calendar {
-    margin-bottom: 40px;
-    background: transparent;
+	margin-bottom: 40px;
+	background: transparent;
 
-    &__header {
-        margin-bottom: 41px;
-        text-align: left;
-        font-weight: 700;
-        font-size: $base-font-size;
-        line-height: $base-line-height;
+	&__header {
+		margin-bottom: 41px;
+		text-align: left;
+		font-weight: 700;
+		font-size: $base-font-size;
+		line-height: $base-line-height;
 
-        >p {
-            position: relative;
-            display: inline-block;
-            color: $tab-color;
-            margin-left: 20px;
+		> p {
+			position: relative;
+			display: inline-block;
+			color: $tab-color;
+			margin-left: 20px;
 
-            &.active {
-                color: $text-color;
+			&.active {
+				color: $text-color;
 
-                &::after {
-                    content: '';
-                    display: block;
-                    border-top: 3px solid $yellow;
-                    position: absolute;
-                    bottom: -6px;
-                    left: 0;
-                    right: 0;
-                }
-            }
+				&::after {
+					content: "";
+					display: block;
+					border-top: 3px solid $yellow;
+					position: absolute;
+					bottom: -6px;
+					left: 0;
+					right: 0;
+				}
+			}
+		}
+	}
 
-        }
+	> ul {
+		display: flex;
+		flex-wrap: wrap;
 
-    }
+		> li {
+			width: 44px;
+			height: 44px;
+			font-weight: 700;
+			cursor: pointer;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			margin-left: 15px;
 
-    >ul {
-        display: flex;
-        flex-wrap: wrap;
+			&:nth-child(7n) {
+				margin-right: 0;
+			}
 
-        >li {
-            width: 44px;
-            height: 44px;
-            font-weight: 700;
-            cursor: pointer;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-left: 15px;
+			&.empty {
+				pointer-events: none;
+			}
 
-            &:nth-child(7n) {
-                margin-right: 0;
-            }
+			&:hover {
+				color: $red-active;
+			}
 
-            &.empty {
-                pointer-events: none;
-            }
-
-            &:hover {
-                color: $red-active;
-            }
-
-            &.active {
-                background-color: $btn-red;
-                color: $white;
-            }
-        }
-    }
+			&.active {
+				background-color: $btn-red;
+				color: $white;
+			}
+		}
+	}
 }
 
 @media only screen and (max-width: 1199.8px) {
-    .calendar-section {
-        padding: 111px 0 100px;
+	.calendar-section {
+		padding: 111px 0 100px;
 
-        &__title {
-            font-size: $font-size-h2 - 6px;
-            line-height: $line-height-h2 - 6px;
-            margin-bottom: 10px;
-        }
+		&__title {
+			font-size: $font-size-h2 - 6px;
+			line-height: $line-height-h2 - 6px;
+			margin-bottom: 10px;
+		}
 
-        &__block {
-            margin-top: 25px;
-        }
+		&__block {
+			margin-top: 25px;
+		}
 
-        &__form {
-            padding: 40px 35px 50px 20px;
-        }
+		&__form {
+			padding: 40px 35px 50px 20px;
+		}
+	}
 
-    }
+	.calendar {
+		margin-bottom: 20px;
 
-    .calendar {
-        margin-bottom: 20px;
+		&__header {
+			margin-bottom: 20px;
 
-        &__header {
-            margin-bottom: 20px;
-
-            >p {
-                margin-left: 20px;
-            }
-        }
-    }
+			> p {
+				margin-left: 20px;
+			}
+		}
+	}
 }
 
-
 @media only screen and (max-width: 991.8px) {
-    .calendar-section {
+	.calendar-section {
+		&__title {
+			font-size: $font-size-h3;
+			line-height: $line-height-h3;
 
-        &__title {
-            font-size: $font-size-h3;
-            line-height: $line-height-h3;
+			+ p {
+				width: 60%;
+			}
+		}
 
-            +p {
-                width: 60%;
-            }
-        }
+		&__block {
+			margin-top: 60px;
+		}
 
-        &__block {
+		&__form {
+			flex: 0 0 100%;
+			max-width: 450px;
+			padding: 43px 0 61px;
+			margin: 0 auto;
 
-            margin-top: 60px;
-        }
+			.group-checkobox {
+				justify-content: center;
+			}
+		}
 
-        &__form {
-            flex: 0 0 100%;
-            max-width: 450px;
-            padding: 43px 0 61px;
-            margin: 0 auto;
+		&__img {
+			display: none;
+		}
+	}
 
-            .group-checkobox {
-                justify-content: center;
-            }
-        }
+	.calendar {
+		margin-bottom: 54px;
 
-        &__img {
-            display: none;
-        }
+		&__header {
+			margin-bottom: 41px;
+			text-align: center;
 
-    }
-
-    .calendar {
-        margin-bottom: 54px;
-
-        &__header {
-            margin-bottom: 41px;
-            text-align: center;
-
-            >p {
-                margin-left: 20px;
-            }
-        }
-    }
+			> p {
+				margin-left: 20px;
+			}
+		}
+	}
 }
 
 @media only screen and (max-width: 767.8px) {
-    .calendar-section {
-        padding: 75px 0;
+	.calendar-section {
+		padding: 75px 0;
 
-        &__title {
-            width: 100%;
+		&__title {
+			width: 100%;
 
-            +p {
-                width: 100%;
-            }
-        }
-    }
+			+ p {
+				width: 100%;
+			}
+		}
+	}
 }
 
 @media only screen and (max-width: 575.8px) {
-    .calendar-section {
+	.calendar-section {
+		&__title {
+			font-size: $base-font-size;
+			line-height: $base-line-height;
+		}
 
-        &__title {
-            font-size: $base-font-size;
-            line-height: $base-line-height;
-        }
+		&__block {
+			margin-top: 0;
+		}
 
-        &__block {
-            margin-top: 0;
-        }
+		&__form {
+			max-width: 100%;
+			padding: 43px 20px 24px;
+		}
+	}
 
-        &__form {
-            max-width: 100%;
-            padding: 43px 20px 24px;
-        }
+	.calendar {
+		margin-bottom: 30px;
 
-    }
+		&__header {
+			margin-bottom: 37px;
+			text-align: center;
 
-    .calendar {
-        margin-bottom: 30px;
+			> p {
+				margin-left: 20px;
+			}
+		}
 
-        &__header {
-            margin-bottom: 37px;
-            text-align: center;
+		> ul {
+			width: 250px;
+			margin: 0 auto;
 
-            >p {
-                margin-left: 20px;
-            }
-        }
+			> li {
+				width: 30px;
+				height: 30px;
+				margin-left: 5px;
 
-        >ul {
-            width: 250px;
-            margin: 0 auto;
-
-            >li {
-                width: 30px;
-                height: 30px;
-                margin-left: 5px;
-
-                &:nth-child(7n) {
-                    margin-right: 0;
-                }
-            }
-        }
-    }
+				&:nth-child(7n) {
+					margin-right: 0;
+				}
+			}
+		}
+	}
 }
