--- a/app/scss/layout/_knowledge-base.scss
+++ b/app/scss/layout/_knowledge-base.scss
@@ -304,5 +304,44 @@
 }
 
 .base-filter {
-    
+    margin-top: -106px;
+
+    .base-filter__list {
+        background: #FFFFFF;
+        box-shadow: 0px 100px 100px rgba(0, 0, 0, 0.08);
+
+        >li {
+            border-bottom: 1px solid #DBDBDB;
+
+            p {
+                font-size: 18px;
+                line-height: 22px;
+                color: #777777;
+                padding: 15px 35px 15px 27px;
+                position: relative;
+
+                &:after {
+                    content: "";
+                    width: 8px;
+                    height: 13px;
+                    display: inline-block;
+                    background-image: url(../image/knowledge-base/filter-arrow.svg);
+                    background-size: 100% 100%;
+                    position: absolute;
+                    right: 26px;
+                    top: 50%;
+                    margin-top: -6.5px;
+                }
+
+            }
+
+            &:last-child {
+                border-bottom: none;
+            }
+        }
+    }
+}
+
+.delivery_and_payment_main {
+    box-shadow: none;
 }
